Update seperate input models
