# docs/swagger.json
@@ -31,7 +31,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.loginInput"
+                            "$ref": "#/definitions/models.LoginInput"
                         }
                     }
                 ],
@@ -87,7 +87,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.registerInput"
+                            "$ref": "#/definitions/models.RegisterInput"
                         }
                     }
                 ],
@@ -136,7 +136,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.resetPasswordInput"
+                            "$ref": "#/definitions/models.ResetPasswordInput"
                         }
                     }
                 ],
@@ -275,7 +275,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.updateUserInput"
+                            "$ref": "#/definitions/models.UpdateUserInput"
                         }
                     }
                 ],
@@ -324,7 +324,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.changePasswordInput"
+                            "$ref": "#/definitions/models.ChangePasswordInput"
                         }
                     }
                 ],
@@ -359,10 +359,245 @@
                     }
                 }
             }
+        },
+        "/vocabulary": {
+            "post": {
+                "description": "Create Vocabulary",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Vocabulary"
+                ],
+                "summary": "Create Vocabulary",
+                "parameters": [
+                    {
+                        "description": "Vocabulary ID",
+                        "name": "vocabularyInput",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.VocabularyInput"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/vocabulary/": {
+            "get": {
+                "description": "Get Vocabularies",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Vocabulary"
+                ],
+                "summary": "Get Vocabularies",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/vocabulary/{id}": {
+            "get": {
+                "description": "Get Vocabulary",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Vocabulary"
+                ],
+                "summary": "Get Vocabulary",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Vocabulary ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update Vocabulary",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Vocabulary"
+                ],
+                "summary": "Update Vocabulary",
+                "parameters": [
+                    {
+                        "description": "Vocabulary ID",
+                        "name": "vocabularyInput",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.VocabularyInput"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Vocabulary ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete Vocabulary",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Vocabulary"
+                ],
+                "summary": "Delete Vocabulary",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Vocabulary ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "handlers.changePasswordInput": {
+        "models.ChangePasswordInput": {
             "type": "object",
             "properties": {
                 "newPassword": {
@@ -373,7 +608,21 @@
                 }
             }
         },
-        "handlers.loginInput": {
+        "models.Japanese": {
+            "type": "object",
+            "properties": {
+                "kana": {
+                    "type": "string"
+                },
+                "kanji": {
+                    "type": "string"
+                },
+                "romaji": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.LoginInput": {
             "type": "object",
             "properties": {
                 "email": {
@@ -384,7 +633,7 @@
                 }
             }
         },
-        "handlers.registerInput": {
+        "models.RegisterInput": {
             "type": "object",
             "properties": {
                 "email": {
@@ -401,7 +650,7 @@
                 }
             }
         },
-        "handlers.resetPasswordInput": {
+        "models.ResetPasswordInput": {
             "type": "object",
             "properties": {
                 "email": {
@@ -409,13 +658,54 @@
                 }
             }
         },
-        "handlers.updateUserInput": {
+        "models.UpdateUserInput": {
             "type": "object",
             "properties": {
                 "LastName": {
                     "type": "string"
                 },
                 "firstName": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.VocabularyInput": {
+            "type": "object",
+            "properties": {
+                "english": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "examples": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "image": {
+                    "type": "string"
+                },
+                "japanese": {
+                    "$ref": "#/definitions/models.Japanese"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "thai": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "type": {
+                    "type": "string"
+                },
+                "vocie": {
                     "type": "string"
                 }
             }
